
    TODO: Validate UTIs and app bundle identifiers properly
    TODO: Treat drop into STPathTextField like any other drop, don't let editor swallow it
    TODO: File watching still broken for script path
    TODO: Make the type lists in drop settings editable like those in Args controller

    TODO: [img setTemplate] option for Status Item icon

    * Args button title now shows the number of custom arguments that have been set
    * UTIs are now the default in Drop Settings (public.item and public.folder)
    * Move project over to ARC

For 5.0
    * Long GNU named params for command line tool, e.g. --some-option
    * Fixed issue where ScriptExec quit before script output was parsed
    * Add new examples Icns2Iconset, ImageResizer
    * Integrated CFBundleVersion increment script into build process
    * Updated keys in information property lists
    * Added ALERT: example
    * Added authenticated execution example
    * Optimize Location: parsing for Web Output
    * Parsed commands are now removed from script text output
    * Fixed bug where Status Item menu intermittently showed empty output
    * New high res images for documentation
    * Added example showing STATUSMENUICON: syntax in action
    * Migrated source to modern Objective-C syntax (literals, properties etc.)
    * Now using bindings for defaults
    * Implemented UI stuff making clear that UTIs exclude suffixes
    * Fixed issue where a status menu could display an empty menu if clicked repeatedly
    * Use UTI methods instead of deprecated imageFileTypes
    * Fixed issue where dropping text on an app wouldn't work with “Remain running after initial execution” off
    * Symlinks now resolved when adding files to Bundled Files list
    * Folder sizes are now calculated much faster (and asynchronously) when added to Bundled Files list
    * Arguments window now highlights arguments and argument groups in command preview field
    * New high resolution (1024x1024) icons