@@ -30,9 +30,4 @@ cp -r "%%CMDLINE_NIB_NAME%%" "%%CMDLINE_SHARE_PATH%%"
 echo "Setting permissions"
 chmod -R 755 "%%CMDLINE_SHARE_PATH%%"
 
-# Create text file with version number
-echo "Creating CLT versioning file"
-touch "%%CMDLINE_VERSION_PATH%%"
-echo "%%PROGRAM_VERSION%%" > "%%CMDLINE_VERSION_PATH%%"
-
 exit 0
