@@ -24,6 +24,8 @@ For 5.1
 
     TODO: [img setTemplate] option for Status Item icon
 
+    * More robust command line tool version checking
+    * Fixed issue where showing the Preferences window lagged due to icon fetching on main thread
     * Args button title now shows the number of custom arguments that have been set
     * UTIs are now the default in Drop Settings (public.item and public.folder)
     * Move project over to ARC
